--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=employees
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/task
+spring.datasource.url=jdbc:postgresql://localhost:5432/employees
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
